# fuzzyTSmodel

./: README.md  fuzzymodel.py  pyproject.toml  requirements.txt  sin_exemple.py  sin_online_exemple.py  sin_supervised_exemple.py
models/: fuzzyTS_sin_exemple.npz
tests/: sin_exemple.py
