[project]
name = "fuzzytsmodel"
version = "0.1.0"
description = "Fuzzy model with automatic rule selection for time series forecasting"
authors = [{ name = "Vitor França", email = "vitor.sousa.franca@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "pyqt6>=6.9.1",
    "simpful>=2.12.0",
]
